# symptom-test-tracker

./: PLAN.md  package.json  tsconfig.json  vite.config.js
.github/workflows/: release.yml
coverage/: glossary.ts.html  index.html  lcov.info  utils.ts.html
coverage/lcov-report/: glossary.ts.html  index.html  utils.ts.html
scripts/: bump.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs
src-tauri/src/commands/: export.rs  labs.rs  mod.rs  settings.rs  symptoms.rs
src/lib/: db.ts  glossary.test.ts  glossary.ts  types.ts  utils.test.ts  utils.ts
src/lib/views/: Dashboard.svelte  Export.svelte  Glossary.svelte  LabEntry.svelte  LabManage.svelte  LabResults.svelte  Settings.svelte  SymptomEditor.svelte  SymptomEntry.svelte  Trends.svelte  Welcome.svelte
src/routes/: +page.svelte
