[package]
name = "symptom-test-tracker"
version = "1.0.0"
description = "Desktop app for tracking symptoms and lab results"
authors = ["you"]
edition = "2021"
default-run = "symptom-test-tracker"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "symptom-test-tracker"
path = "src/main.rs"

[[bin]]
name = "mcp-server"
path = "src/bin/mcp_server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
